<resources>
    <string name="app_name">Face App</string>
    <string name="facebook_app_id">2475329672762343</string>
    <string name="fb_login_protocol_scheme">fb2475329672762343</string>
    <string name="hello_world">hello_world</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="photo_tip">Photo tip: Make waves with a beach photo and get more likes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="type_a_message">Type a message ...</string>
    <string name="default_text">Text View a;sdf asd;fjna as;dfjads sad;jasd asdfjgasdfg asdfg;jasdvas vasfd vasdjvadfsvzds fvadf vdasf vdf vsdf vdf g dsfbv dsfv sdfv dsf</string>
    <string name="my_number_is">My number is</string>
    <string name="number_request_message">When you tap CONTINUE, Face App will send you a text with verification code. Message and data rate may apply. The verified number can be used to log in</string>
    <string name="my_code_is">My code is</string>
    <string name="get_gender">I am a</string>
    <string name="my_university_is">My university is</string>
    <string name="university_description">This is how it will appear in Face App, and you will not be able to change it.</string>
    <string name="university_name">University Name</string>
    <string name="ask_location">It is vital to enable your \n location to use Face App</string>
    <string name="location_permission_explain">Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="verify_phone_number">Verify a phone number to help secure account</string>
    <string name="Going_global">Going global will allow you to see people nearby and from around the world</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyB0sEZweoKDjC6-I_eIoVo2W56QbtYncB8</string>
    <string name="age_range">FaceApp uses these preferences to suggest matches. Some match suggestions may not fail within your desired parameters.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_responce_timeout">No responce timeout</string>
    <string name="no_connection_error">No connection error</string>
    <string name="error">Error</string>
    <string name="sender_id">0</string>
    <string name="splash_app_title">Sample Video Chat Java</string>
    <string name="splash_create_session_error">Create session errors:</string>
    <string name="dlg_signal_error">Disconnected… Please check your Internet connection!</string>
    <string name="dlg_relogin_wait">You are still connecting.. Please try once more</string>
    <string name="dlg_login">Login…</string>
    <string name="dlg_sign_in">Sign In…</string>
    <string name="dlg_updating_user">Updating user…</string>
    <string name="dlg_creating_new_user">Creating new user…</string>
    <string name="dlg_logout">Logout…</string>
    <string name="dlg_loading_opponents">Loading opponents…</string>
    <string name="dlg_retry">Retry</string>
    <string name="dlg_allow">Allow</string>
    <string name="login_chat_retry">Trying Relogin. Please wait a moment</string>
    <string name="notification_title">You have an active call</string>
    <string name="notification_text">Touch takes you back to the call %1$s</string>
    <string name="error_credentials_empty">Credentials are wrong or empty. You have to set:
        Application ID, Authentification Key, Authentification Secret, Account Key in constants in App.java
        and you have to set Sender ID in the string resources to launch application.
        If you haven\'t them you can register new account and application at https://admin.quickblox.com
        then put Application credentials from Overview page + Account key from https://admin.quickblox.com/account/settings</string>
    <string name="login_data_error">Wrong login</string>
    <string name="username_data_error">Wrong username</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error">Error SignIn user, please try again</string>
    <string name="sign_in_error_with_error">Sign In error. Error</string>
    <string name="sign_in_error_without_error">Sign In error</string>
    <string name="logout_user_with_error">Logout user error. Error</string>
    <string name="error_empty_login">Login can not be empty</string>
    <string name="error_empty_chat_room_name">Chat room name can not be empty</string>
    <string name="error_permission_video">You should allow Camera permission</string>
    <string name="error_permission_audio">You should allow Microphone permission</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="update_user_error">Update user error. Error</string>
    <string name="loading_users_error">Loading users error. Error</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="field_name_user_login">User name</string>
    <string name="field_name_user_fullname">User Full Name</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without spaces, the first char must be a letter</string>
    <string name="action_start_login">Done</string>
    <string name="action_settings">Settings</string>
    <string name="action_screen_share">Screen share</string>
    <string name="action_update_opponens_list">Update opponents list</string>
    <string name="action_logout">Logout</string>
    <string name="action_start_video_call">Video call</string>
    <string name="action_start_audio_call">Audio call</string>
    <string name="action_dialogs_app_info">App Info</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="title_login_activity">Enter to Videochat</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="title_one_user_selected">%s user selected</string>
    <string name="tile_many_users_selected">%s users selected</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="edit_opponents_list">Edit opponents list</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="outgoing_audio_video_call_title">%s\n\nRinging</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="opponent_pending">Pending</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>
    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="text_status_closed">Closed</string>
    <string name="text_status_time_out">Time Out</string>
    <string name="text_status_failed">Failed</string>
    <string name="text_welcoming_message">Please enter Login and Username.</string>
    <string name="hint_user_login">Login</string>
    <string name="hint_user_full_name">Username</string>
    <string name="text_select_users_to_call">Select users you want to call</string>
    <string name="call_was_stopped_connection_lost">Call was stopped because connection was lost</string>
    <string name="connection_lost">Connection lost</string>
    <string name="text_push_notification_message">"%s is calling you"</string>
    <string name="title_video_category">Video</string>
    <string name="title_call_settings_category">Call Settings</string>
    <string name="pref_default_value">Default</string>
    <string name="pref_default_camera_key">default_camera_preference</string>
    <string name="pref_default_camera_title">Default Camera</string>
    <string name="pref_default_camera_dlg">Select default camera</string>
    <string name="pref_default_camera_default">0</string>
    <string name="pref_frame_rate_key">frame_rate</string>
    <string name="pref_frame_rate_title">Frame Rate (0&#8211;30)</string>
    <string name="pref_frame_rate_default">0</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video Format</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution</string>
    <string name="pref_resolution_default">-1</string>
    <string name="pref_startbitrate_key">startbitrate_preference</string>
    <string name="pref_startbitrate_title">Start bitrate setting</string>
    <string name="pref_startbitrate_dlg">Start bitrate setting</string>
    <string name="pref_startbitrate_default">Default</string>
    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Bandwidth (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_dlg">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Built-in AEC is not available</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_manage_speakerphone_by_proximity_key">manage_speakerphone_by_proximity_preference</string>
    <string name="pref_manage_speakerphone_by_proximity_title">Manage Speaker Phone by Proximity Sensor</string>
    <string name="pref_manage_speakerphone_by_proximity_dlg">Manage Speaker Phone by Proximity Sensor</string>
    <string name="pref_manage_speakerphone_by_proximity_summary">Enables managing of Speaker Phone by Proximity Sensor for Audio calls</string>
    <string name="pref_manage_speakerphone_by_proximity_default">false</string>
    <string name="pref_answer_time_interval_key">answer_time_interval</string>
    <string name="pref_answer_time_interval_title">Answer Time Interval (15&#8211;90s)</string>
    <string name="pref_answer_time_interval_default_value">45</string>
    <string name="pref_disconnect_time_interval_key">disconnect_time_interval</string>
    <string name="pref_disconnect_time_interval_title">Disconnect Time Interval (10&#8211;90s)</string>
    <string name="pref_disconnect_time_interval_default_value">10</string>
</resources>