<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <LinearLayout
        android:id="@+id/root_view_login_activity"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        style="@style/MatchParent"
        android:layout_marginLeft="@dimen/padding_start"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/MatchWidth"
            android:paddingTop="@dimen/padding_actionbar"
            android:text="@string/text_welcoming_message" />

        <EditText
            android:id="@+id/user_login"
            style="@style/MatchWidth"
            android:text="@string/hint_user_login"
            android:paddingTop="@dimen/padding_top"
            android:singleLine="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/user_full_name"
            style="@style/MatchWidth"
            android:text="@string/hint_user_full_name"
            android:paddingTop="@dimen/padding_top"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Creating user..."
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>